improve: add more tests and improve other tests